src/objects/XAP_ASYNC_Result__c.object
<CustomObject>
    <fields>
        <fullName>Async_Job_Class_Name__c</fullName>
        <formula>Async_Request__r.Class_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Async Job Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Async_Job_Id__c</fullName>
        <label>Async Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XAP_ASYNC_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Async Request</label>
        <referenceTo>XAP_XAP_ASYNC_Request__c</referenceTo>
        <relationshipLabel>Async Results</relationshipLabel>
        <relationshipName>Async_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DML_Errors__c</fullName>
        <label>DML Errors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Type_Name__c</fullName>
        <label>Exception Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Integration User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Async_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>XAP_REST_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>REST Request</label>
        <referenceTo>XAP_REST_Request__c</referenceTo>
        <relationshipLabel>Async Results</relationshipLabel>
        <relationshipName>Async_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Async Results</relationshipLabel>
        <relationshipName>Async_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Email__c</fullName>
        <label>Target Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Target_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Async_Results1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unexpected_Exception__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Unexpected Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unhandled_Exception__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Unhandled Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unsaved_Record__c</fullName>
        <label>Unsaved Record</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Async Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Async_Job_Class_Name__c</columns>
        <columns>Integration_User__c</columns>
        <columns>Target_User__c</columns>
        <columns>Target_Contact__c</columns>
        <columns>XAP_ASYNC_Request__c</columns>
        <columns>XAP_REST_Request__c</columns>
        <columns>Async_Job_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>Async Results Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Results</pluralLabel>
    <recordTypes>
        <fullName>Failure</fullName>
        <active>true</active>
        <label>Failure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Success</fullName>
        <active>true</active>
        <label>Success</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>